--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -28,6 +28,7 @@
   "products": "المنتجات",
   "purchase": "المشتريات",
   "stockTransfers": "تحويلات المخزون",
+  "stockReceipts": "استلام المخزون",
   "Order Purchases": "طلبات الشراء",
   "Receive Purchases": "استلام المشتريات",
   "Return Purchases": "مرتجعات المشتريات"
