add product & handle some translation & add unit & add company & add type (Category)

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -341,7 +341,104 @@
       "groupName": "اسم المجموعة",
       "idcAttachment": "مرفق بطاقة الهوية"
     }
+  },
+  "branchesManagement": {
+  "title": "إدارة الفروع",
+  "noBranches": "لا توجد فروع بعد",
+  "getStarted": "ابدأ بإنشاء أول فرع لعملك.",
+  "createBranch": "إنشاء فرع",
+  "addNewBranch": "إضافة فرع جديد",
+  "updateBranch": "تحديث الفرع",
+  "editBranch": "تعديل الفرع",
+  "branchName": "اسم الفرع",
+  "country": "الدولة",
+  "contactNumber": "رقم الاتصال",
+  "createdDate": "تاريخ الإنشاء",
+  "taxRate": "معدل الضريبة",
+  "address": "العنوان",
+  "email": "البريد الإلكتروني",
+  "landline": "الهاتف الأرضي",
+  "vatNumber": "الرقم الضريبي",
+  "crNumber": "رقم السجل التجاري",
+  "goldPriceSource": "مصدر سعر الذهب",
+  "manualGoldPrice": "سعر الذهب اليدوي",
+  "currencies": "العملات",
+  "paymentMethods": "طرق الدفع",
+  "logo": "الشعار",
+  "business": "العمل",
+  "errorLoading": "خطأ في تحميل الفروع",
+  "swal": {
+    "areYouSure": "هل أنت متأكد؟",
+    "cantRevert": "لن تتمكن من التراجع عن هذا!",
+    "yesDelete": "نعم، احذفه!",
+    "deleted": "تم الحذف!",
+    "branchDeleted": "تم حذف الفرع.",
+    "error": "خطأ!",
+    "errorDeleting": "حدث خطأ أثناء الحذف."
   }
+},
+"businessManagement": {
+  "title": "إدارة الأعمال",
+  "noBusinesses": "لا توجد أعمال بعد",
+  "getStarted": "ابدأ بإنشاء أول عمل لك.",
+  "createBusiness": "إنشاء عمل",
+  "addNewBusiness": "إضافة عمل جديد",
+  "updateBusiness": "تحديث العمل",
+  "editBusiness": "تعديل العمل",
+  "deactivateBusiness": "تعطيل العمل",
+  "businessName": "اسم العمل",
+  "ownerEmail": "بريد المالك",
+  "subscriptionStatus": "حالة الاشتراك",
+  "subscriptionPeriod": "فترة الاشتراك",
+  "contactNumber": "رقم الاتصال",
+  "package": "الباقة",
+  "errorLoading": "خطأ في تحميل الأعمال"
+},
+"userManagement": {
+  "title": "إدارة المستخدمين",
+  "noUsers": "لا توجد مستخدمين بعد",
+  "getStarted": "ابدأ بإنشاء أول مستخدم لعملك.",
+  "createUser": "إنشاء مستخدم",
+  "addNewUser": "إضافة مستخدم جديد",
+  "updateUser": "تحديث المستخدم",
+  "editUser": "تعديل المستخدم",
+  "deactivateUser": "تعطيل المستخدم",
+  "showUserInfo": "عرض معلومات المستخدم",
+  "userName": "اسم المستخدم",
+  "emailAddress": "البريد الإلكتروني",
+  "phoneNumber": "رقم الهاتف",
+  "branchAssigned": "الفروع المعينة",
+  "role": "الدور",
+  "address": "العنوان",
+  "password": "كلمة المرور",
+  "confirmPassword": "تأكيد كلمة المرور",
+  "branches": "الفروع",
+  "user": "المستخدم",
+  "errorLoading": "خطأ في تحميل المستخدمين"
+},
+"roles": {
+  "title": "الأدوار",
+  "noRoles": "لا توجد أدوار بعد",
+  "getStarted": "ابدأ بإنشاء أول دور لعملك.",
+  "createFirstRole": "إنشاء أول دور",
+  "createRole": "إنشاء دور",
+  "addNewRole": "إضافة دور جديد",
+  "updateRole": "تحديث الدور",
+  "editRole": "تعديل الدور",
+  "managePermissions": "إدارة الصلاحيات",
+  "deleteRole": "حذف الدور",
+  "permissions": "الصلاحيات",
+  "errorLoading": "خطأ في تحميل الأدوار",
+  "swal": {
+    "areYouSure": "هل أنت متأكد؟",
+    "cantRevert": "لن تتمكن من التراجع عن هذا!",
+    "yesDelete": "نعم، احذفه!",
+    "deleted": "تم الحذف!",
+    "roleDeleted": "تم حذف الدور.",
+    "error": "خطأ!",
+    "errorDeleting": "حدث خطأ أثناء الحذف."
+  }
+}
 
 
 }
