--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -343,5 +343,102 @@
       "idcAttachment": "IDC Attachment"
     }
   
+},
+"branchesManagement": {
+  "title": "Branches Management",
+  "noBranches": "No branches yet",
+  "getStarted": "Get started by creating your first branch for your business.",
+  "createBranch": "Create Branch",
+  "addNewBranch": "Add New Branch",
+  "updateBranch": "Update Branch",
+  "editBranch": "Edit Branch",
+  "branchName": "Branch Name",
+  "country": "Country",
+  "contactNumber": "Contact Number",
+  "createdDate": "Created Date",
+  "taxRate": "Tax Rate",
+  "address": "Address",
+  "email": "Email",
+  "landline": "Landline",
+  "vatNumber": "VAT Number",
+  "crNumber": "CR Number",
+  "goldPriceSource": "Gold Price Source",
+  "manualGoldPrice": "Manual Gold Price",
+  "currencies": "Currencies",
+  "paymentMethods": "Payment Methods",
+  "logo": "Logo",
+  "business": "Business",
+  "errorLoading": "Error loading branches",
+  "swal": {
+    "areYouSure": "Are you sure?",
+    "cantRevert": "You won't be able to revert this!",
+    "yesDelete": "Yes, delete it!",
+    "deleted": "Deleted!",
+    "branchDeleted": "Your branch has been deleted.",
+    "error": "Error!",
+    "errorDeleting": "There was an error deleting."
+  }
+},
+"businessManagement": {
+  "title": "Business Management",
+  "noBusinesses": "No businesses yet",
+  "getStarted": "Get started by creating your first business.",
+  "createBusiness": "Create Business",
+  "addNewBusiness": "Add New Business",
+  "updateBusiness": "Update Business",
+  "editBusiness": "Edit Business",
+  "deactivateBusiness": "Deactivate Business",
+  "businessName": "Business Name",
+  "ownerEmail": "Owner Email",
+  "subscriptionStatus": "Subscription Status",
+  "subscriptionPeriod": "Subscription Period",
+  "contactNumber": "Contact Number",
+  "package": "Package",
+  "errorLoading": "Error loading businesses"
+},
+"userManagement": {
+  "title": "User Management",
+  "noUsers": "No users yet",
+  "getStarted": "Get started by creating your first user for your business.",
+  "createUser": "Create User",
+  "addNewUser": "Add New User",
+  "updateUser": "Update User",
+  "editUser": "Edit User",
+  "deactivateUser": "Deactivate User",
+  "showUserInfo": "Show User Info",
+  "userName": "User Name",
+  "emailAddress": "Email Address",
+  "phoneNumber": "Phone Number",
+  "branchAssigned": "Branch Assigned",
+  "role": "Role",
+  "address": "Address",
+  "password": "Password",
+  "confirmPassword": "Confirm Password",
+  "branches": "Branches",
+  "user": "User",
+  "errorLoading": "Error loading users"
+},
+"roles": {
+  "title": "Roles",
+  "noRoles": "No roles yet",
+  "getStarted": "Get started by creating your first role for your business.",
+  "createFirstRole": "Create First Role",
+  "createRole": "Create Role",
+  "addNewRole": "Add New Role",
+  "updateRole": "Update Role",
+  "editRole": "Edit Role",
+  "managePermissions": "Manage Permissions",
+  "deleteRole": "Delete Role",
+  "permissions": "Permissions",
+  "errorLoading": "Error loading roles",
+  "swal": {
+    "areYouSure": "Are you sure?",
+    "cantRevert": "You won't be able to revert this!",
+    "yesDelete": "Yes, delete it!",
+    "deleted": "Deleted!",
+    "roleDeleted": "Your role has been deleted.",
+    "error": "Error!",
+    "errorDeleting": "There was an error deleting."
+  }
 }
 }
