handle edit product and veiw list product and unit and company and type and handle translate in all and some update

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -27,6 +27,7 @@
   "suppliers": "الموردين",
   "products": "المنتجات",
   "purchase": "المشتريات",
+  "stockPoint": "نقطة المخزون",
   "stockTransfers": "تحويلات المخزون",
   "stockReceipts": "استلام المخزون",
   "Order Purchases": "طلبات الشراء",
@@ -438,6 +439,213 @@
     "error": "خطأ!",
     "errorDeleting": "حدث خطأ أثناء الحذف."
   }
+},
+"products": {
+  "title": "إدارة المنتجات",
+  "addNewProduct": "إضافة منتج جديد",
+  "productName": " اسم المنتج العربي",
+  "englishName": "الاسم المنتج الإنجليزي",
+  "globalCode": "الكود العالمي",
+  "cost": "التكلفة",
+  "company": "الشركة",
+  "type": "النوع",
+  "currency": "ر.س",
+  "searchPlaceholder": "ابحث في المنتجات...",
+  "noProducts": "لا توجد منتجات بعد",
+  "noProductsFound": "لم يتم العثور على منتجات",
+  "getStarted": "ابدأ بإنشاء أول منتج لعملك.",
+  "createProduct": "إنشاء منتج",
+  "errorLoading": "خطأ في تحميل المنتجات",
+  "tryDifferentSearch": "جرب مصطلحات بحث مختلفة أو تحقق من التهجئة.",
+  "swal": {
+    "areYouSure": "هل أنت متأكد؟",
+    "cantRevert": "لن تتمكن من التراجع عن هذا!",
+    "yesDelete": "نعم، احذفه!",
+    "deleted": "تم الحذف!",
+    "productDeleted": "تم حذف المنتج.",
+    "error": "خطأ!",
+    "errorDeleting": "حدث خطأ أثناء الحذف."
+  }
+},
+"productsType": {
+  "title": "إدارة أنواع المنتجات",
+  "addNewType": "إضافة نوع جديد",
+  "editType": "تعديل النوع",
+  "createType": "إنشاء نوع",
+  "updateType": "تحديث النوع",
+  "name": "الاسم",
+  "parent": "النوع الرئيسي",
+  "createdBy": "تم الإنشاء بواسطة",
+  "createdAt": "تاريخ الإنشاء",
+  "noParent": "لا يوجد نوع رئيسي",
+  "noTypes": "لا توجد أنواع منتجات بعد",
+  "noTypesFound": "لم يتم العثور على أنواع",
+  "getStarted": "ابدأ بإنشاء أول نوع منتج لعملك.",
+  "searchPlaceholder": "ابحث في أنواع المنتجات...",
+  "errorLoading": "خطأ في تحميل أنواع المنتجات",
+  "tryDifferentSearch": "جرب مصطلحات بحث مختلفة أو تحقق من التهجئة.",
+  "swal": {
+    "areYouSure": "هل أنت متأكد؟",
+    "cantRevert": "لن تتمكن من التراجع عن هذا!",
+    "yesDelete": "نعم، احذفه!",
+    "deleted": "تم الحذف!",
+    "typeDeleted": "تم حذف نوع المنتج.",
+    "error": "خطأ!",
+    "errorDeleting": "حدث خطأ أثناء الحذف."
+  }
+},
+"productsForm": {
+  "createProduct": "إنشاء منتج جديد",
+  "updateProduct": "تحديث المنتج",
+  "basicInformation": "المعلومات الأساسية",
+  "productSettings": "إعدادات المنتج",
+  "arabicName": "الاسم العربي",
+  "englishName": "الاسم الإنجليزي",
+  "commercialName": "الاسم التجاري",
+  "globalCode": "الكود العالمي",
+  "shortCode": "الكود المختصر",
+  "description": "الوصف",
+  "cost": "التكلفة",
+  "company": "الشركة",
+  "type": "النوع",
+  "enterArabicName": "أدخل الاسم العربي",
+  "enterEnglishName": "أدخل الاسم الإنجليزي",
+  "enterCommercialName": "أدخل الاسم التجاري",
+  "enterGlobalCode": "أدخل الكود العالمي",
+  "enterShortCode": "أدخل الكود المختصر",
+  "enterDescription": "أدخل وصف المنتج",
+  "selectCompany": "اختر الشركة",
+  "selectType": "اختر النوع",
+  "addNewCompany": "إضافة شركة جديدة",
+  "addNewType": "إضافة نوع جديد",
+  "isExpirable": "قابل للانتهاء",
+  "hasLabel": "له ملصق",
+  "isDiscountable": "قابل للخصم",
+  "maxDiscount": "الحد الأقصى للخصم",
+  "units": "الوحدات",
+  "addUnit": "إضافة وحدة",
+  "unit": "الوحدة",
+  "remove": "إزالة",
+  "selectUnit": "اختر الوحدة",
+  "addNewUnit": "إضافة وحدة جديدة",
+  "quantityPerParent": "الكمية لكل وحدة أصل",
+  "mainUnit": "الوحدة الرئيسية",
+  "batches": "الدفعات",
+  "addBatch": "إضافة دفعة",
+  "batchNumber": "رقم الدفعة",
+  "quantity": "الكمية",
+  "expirationDate": "تاريخ الانتهاء",
+  "price": "السعر",
+  "applyToOld": "تطبيق على القديم",
+  "enterBatchNumber": "أدخل رقم الدفعة",
+  "viewGanttChart": "عرض مخطط جانت",
+  "removeBatch": "إزالة الدفعة",
+  "ganttChartForBatch": "مخطط جانت للدفعة",
+  "noBatchesAdded": "لم تتم إضافة أي دفعات بعد",
+  "addFirstBatch": "إضافة أول دفعة",
+  "noChanges": "لم يتم إجراء أي تغييرات",
+  "typeName": "اسم النوع",
+  "parentType": "النوع الأصلي (اختياري)",
+  "companyName": "اسم الشركة",
+  "email": "البريد الإلكتروني",
+  "address": "العنوان",
+  "phoneNumber": "رقم الهاتف",
+  "unitName": "اسم الوحدة",
+  "parentUnit": "الوحدة الأصلية (اختياري)",
+  "createProductType": "إنشاء نوع منتج جديد",
+  "createType": "إنشاء النوع",
+  "createCompany": "إنشاء شركة",
+  "createNewUnit": "إنشاء وحدة جديدة",
+  "createUnit": "إنشاء الوحدة"
+},
+"productsUnit": {
+  "title": "إدارة وحدات المنتجات",
+  "addNewUnit": "إضافة وحدة جديدة",
+  "editUnit": "تعديل الوحدة",
+  "createUnit": "إنشاء وحدة",
+  "updateUnit": "تحديث الوحدة",
+  "name":  "الوحدة الصغرة",
+  "parent": "الوحدة الكبرى",
+  "childrenCount": "عدد الوحدات الفرعية",
+  "createdBy": "تم الإنشاء بواسطة",
+  "createdAt": "تاريخ الإنشاء",
+  "noParent": "لا يوجد وحدة رئيسية",
+  "noUnits": "لا توجد وحدات منتجات بعد",
+  "noUnitsFound": "لم يتم العثور على وحدات",
+  "getStarted": "ابدأ بإنشاء أول وحدة منتج لعملك.",
+  "searchPlaceholder": "ابحث في وحدات المنتجات...",
+  "errorLoading": "خطأ في تحميل وحدات المنتجات",
+  "tryDifferentSearch": "جرب مصطلحات بحث مختلفة أو تحقق من التهجئة.",
+  "swal": {
+    "areYouSure": "هل أنت متأكد؟",
+    "cantRevert": "لن تتمكن من التراجع عن هذا!",
+    "yesDelete": "نعم، احذفه!",
+    "deleted": "تم الحذف!",
+    "unitDeleted": "تم حذف وحدة المنتج.",
+    "error": "خطأ!",
+    "errorDeleting": "حدث خطأ أثناء الحذف."
+  }
+},
+"productsCompany": {
+  "title": "إدارة شركات المنتجات",
+  "addNewCompany": "إضافة شركة جديدة",
+  "editCompany": "تعديل الشركة",
+  "createCompany": "إنشاء شركة",
+  "updateCompany": "تحديث الشركة",
+  "name": "اسم الشركة",
+  "phone": "رقم الهاتف",
+  "email": "البريد الإلكتروني",
+  "address": "العنوان",
+  "createdBy": "تم الإنشاء بواسطة",
+  "createdAt": "تاريخ الإنشاء",
+  "notProvided": "غير متوفر",
+  "unknown": "غير معروف",
+  "noCompanies": "لا توجد شركات منتجات بعد",
+  "noCompaniesFound": "لم يتم العثور على شركات",
+  "getStarted": "ابدأ بإنشاء أول شركة منتج لعملك.",
+  "searchPlaceholder": "ابحث في شركات المنتجات...",
+  "errorLoading": "خطأ في تحميل شركات المنتجات",
+  "tryDifferentSearch": "جرب مصطلحات بحث مختلفة أو تحقق من التهجئة.",
+  "swal": {
+    "areYouSure": "هل أنت متأكد؟",
+    "cantRevert": "لن تتمكن من التراجع عن هذا!",
+    "yesDelete": "نعم، احذفه!",
+    "deleted": "تم الحذف!",
+    "companyDeleted": "تم حذف شركة المنتج.",
+    "error": "خطأ!",
+    "errorDeleting": "حدث خطأ أثناء الحذف."
+  }
+},
+"productsPage": {
+  "tabs": {
+    "productsList": "قائمة المنتجات",
+    "productsType": "أنواع المنتجات",
+    "productsUnit": "وحدات المنتجات",
+    "productsCompany": "شركات المنتجات"
+  }
+},
+"viewTypeOrUnit": {
+  "errorLoading": "خطأ في تحميل بيانات {{itemType}}",
+  "backToList": "العودة إلى القائمة",
+  "backTo": "العودة إلى {{displayName}}",
+  "edit": "تعديل {{displayName}}",
+  "cancel": "إلغاء",
+  "saving": "جاري الحفظ...",
+  "saveChanges": "حفظ التغييرات",
+  "basicInformation": "المعلومات الأساسية",
+  "name": "الاسم",
+  "enterName": "أدخل اسم {{displayName}}",
+  "parent": "الأصل",
+  "noParent": "لا يوجد أصل",
+  "childrenCount": "عدد الأبناء",
+  "level": "المستوى",
+  "metadata": "البيانات الوصفية",
+  "createdBy": "تم الإنشاء بواسطة",
+  "createdAt": "تاريخ الإنشاء",
+  "lastModified": "آخر تعديل",
+  "id": "المعرف",
+  "unit": "الوحدة",
+  "type": "النوع"
 }
 
 
