--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -28,6 +28,7 @@
   "products": "Products",
   "purchase": "Purchase",
   "stockTransfers": "Stock Transfers",
+  "stockPoint": "Stock Point",
   "Order Purchases": "Order Purchases",
   "Receive Purchases": "Receive Purchases",
   "Return Purchases": "Return Purchases",
@@ -440,5 +441,212 @@
     "error": "Error!",
     "errorDeleting": "There was an error deleting."
   }
+},
+"products": {
+  "title": "Products Management",
+  "addNewProduct": "Add New Product",
+  "productName": "Product Name Arabic",
+  "englishName": "Product Name English",
+  "globalCode": "Global Code",
+  "cost": "Cost",
+  "company": "Company",
+  "type": "Type",
+  "currency": "SAR",
+  "searchPlaceholder": "Search products...",
+  "noProducts": "No products yet",
+  "noProductsFound": "No products found",
+  "getStarted": "Get started by creating your first product for your business.",
+  "createProduct": "Create Product",
+  "errorLoading": "Error loading products",
+  "tryDifferentSearch": "Try different search terms or check your spelling.",
+  "swal": {
+    "areYouSure": "Are you sure?",
+    "cantRevert": "You won't be able to revert this!",
+    "yesDelete": "Yes, delete it!",
+    "deleted": "Deleted!",
+    "productDeleted": "Product has been deleted.",
+    "error": "Error!",
+    "errorDeleting": "Error deleting product."
+  }
+},
+"productsType": {
+  "title": "Products Types Management",
+  "addNewType": "Add New Type",
+  "editType": "Edit Type",
+  "createType": "Create Type",
+  "updateType": "Update Type",
+  "name": "Name",
+  "parent": "Parent Type",
+  "createdBy": "Created By",
+  "createdAt": "Created At",
+  "noParent": "No Parent",
+  "noTypes": "No product types yet",
+  "noTypesFound": "No types found",
+  "getStarted": "Get started by creating your first product type for your business.",
+  "searchPlaceholder": "Search product types...",
+  "errorLoading": "Error loading product types",
+  "tryDifferentSearch": "Try different search terms or check your spelling.",
+  "swal": {
+    "areYouSure": "Are you sure?",
+    "cantRevert": "You won't be able to revert this!",
+    "yesDelete": "Yes, delete it!",
+    "deleted": "Deleted!",
+    "typeDeleted": "Product type has been deleted.",
+    "error": "Error!",
+    "errorDeleting": "Error deleting product type."
+  }
+},
+"productsForm": {
+  "createProduct": "Create New Product",
+  "updateProduct": "Update Product",
+  "basicInformation": "Basic Information",
+  "productSettings": "Product Settings",
+  "arabicName": "Arabic Name",
+  "englishName": "English Name",
+  "commercialName": "Commercial Name",
+  "globalCode": "Global Code",
+  "shortCode": "Short Code",
+  "description": "Description",
+  "cost": "Cost",
+  "company": "Company",
+  "type": "Type",
+  "enterArabicName": "Enter Arabic name",
+  "enterEnglishName": "Enter English name",
+  "enterCommercialName": "Enter commercial name",
+  "enterGlobalCode": "Enter global code",
+  "enterShortCode": "Enter short code",
+  "enterDescription": "Enter product description",
+  "selectCompany": "Select company",
+  "selectType": "Select type",
+  "addNewCompany": "Add new company",
+  "addNewType": "Add new type",
+  "isExpirable": "Is Expirable",
+  "hasLabel": "Has Label",
+  "isDiscountable": "Is Discountable",
+  "maxDiscount": "Max Discount",
+  "units": "Units",
+  "addUnit": "Add Unit",
+  "unit": "Unit",
+  "remove": "Remove",
+  "selectUnit": "Select unit",
+  "addNewUnit": "Add new unit",
+  "quantityPerParent": "Quantity per Parent",
+  "mainUnit": "Main Unit",
+  "batches": "Batches",
+  "addBatch": "Add Batch",
+  "batchNumber": "Batch Number",
+  "quantity": "Quantity",
+  "expirationDate": "Expiration Date",
+  "price": "Price",
+  "applyToOld": "Apply to Old",
+  "enterBatchNumber": "Enter batch number",
+  "viewGanttChart": "View Gantt Chart",
+  "removeBatch": "Remove Batch",
+  "ganttChartForBatch": "Gantt chart for batch",
+  "noBatchesAdded": "No batches added yet",
+  "addFirstBatch": "Add First Batch",
+  "noChanges": "No changes were made",
+  "typeName": "Type Name",
+  "parentType": "Parent Type (Optional)",
+  "companyName": "Company Name",
+  "email": "Email",
+  "address": "Address",
+  "phoneNumber": "Phone Number",
+  "unitName": "Unit Name",
+  "parentUnit": "Parent Unit (Optional)",
+  "createProductType": "Create New Product Type",
+  "createType": "Create Type",
+  "createCompany": "Create Company",
+  "createNewUnit": "Create New Unit",
+  "createUnit": "Create Unit"
+},
+"productsUnit": {
+  "title": "Products Units Management",
+  "addNewUnit": "Add New Unit",
+  "editUnit": "Edit Unit",
+  "createUnit": "Create Unit",
+  "updateUnit": "Update Unit",
+  "name": "Child Unit",
+  "parent": "Parent Unit",
+  "childrenCount": "Children Count",
+  "createdBy": "Created By",
+  "createdAt": "Created At",
+  "noParent": "No Parent",
+  "noUnits": "No product units yet",
+  "noUnitsFound": "No units found",
+  "getStarted": "Get started by creating your first product unit for your business.",
+  "searchPlaceholder": "Search product units...",
+  "errorLoading": "Error loading product units",
+  "tryDifferentSearch": "Try different search terms or check your spelling.",
+  "swal": {
+    "areYouSure": "Are you sure?",
+    "cantRevert": "You won't be able to revert this!",
+    "yesDelete": "Yes, delete it!",
+    "deleted": "Deleted!",
+    "unitDeleted": "Product unit has been deleted.",
+    "error": "Error!",
+    "errorDeleting": "Error deleting product unit."
+  }
+},
+"productsCompany": {
+  "title": "Products Companies Management",
+  "addNewCompany": "Add New Company",
+  "editCompany": "Edit Company",
+  "createCompany": "Create Company",
+  "updateCompany": "Update Company",
+  "name": "Company Name",
+  "phone": "Phone Number",
+  "email": "Email",
+  "address": "Address",
+  "createdBy": "Created By",
+  "createdAt": "Created At",
+  "notProvided": "Not Provided",
+  "unknown": "Unknown",
+  "noCompanies": "No product companies yet",
+  "noCompaniesFound": "No companies found",
+  "getStarted": "Get started by creating your first product company for your business.",
+  "searchPlaceholder": "Search product companies...",
+  "errorLoading": "Error loading product companies",
+  "tryDifferentSearch": "Try different search terms or check your spelling.",
+  "swal": {
+    "areYouSure": "Are you sure?",
+    "cantRevert": "You won't be able to revert this!",
+    "yesDelete": "Yes, delete it!",
+    "deleted": "Deleted!",
+    "companyDeleted": "Product company has been deleted.",
+    "error": "Error!",
+    "errorDeleting": "Error deleting product company."
+  }
+},
+"productsPage": {
+  "tabs": {
+    "productsList": "Products List",
+    "productsType": "Products Type",
+    "productsUnit": "Products Unit",
+    "productsCompany": "Products Company"
+  }
+},
+"viewTypeOrUnit": {
+  "errorLoading": "Error loading {{itemType}} data",
+  "backToList": "Back to List",
+  "backTo": "Back to {{displayName}}",
+  "edit": "Edit {{displayName}}",
+  "cancel": "Cancel",
+  "saving": "Saving...",
+  "saveChanges": "Save Changes",
+  "basicInformation": "Basic Information",
+  "name": "Name",
+  "enterName": "Enter {{displayName}} name",
+  "parent": "Parent",
+  "noParent": "No Parent",
+  "childrenCount": "Children Count",
+  "level": "Level",
+  "metadata": "Metadata",
+  "createdBy": "Created By",
+  "createdAt": "Created At",
+  "lastModified": "Last Modified",
+  "id": "ID",
+  "unit": "Unit",
+  "type": "Type"
 }
 }
