some update and done inventory without print and view transfer

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -201,6 +201,11 @@
     "subscriptionStatus": "حالة الاشتراك",
     "businessLogo": "شعار العمل",
     "uploadLogo": "رفع الشعار",
+    "branchesInformation": "معلومات الفروع",
+    "branch": "فرع",
+    "branchName": "اسم الفرع",
+    "branchContactNumber": "رقم الاتصال",
+    "branchAddress": "العنوان",
     "ownersInformation": "معلومات المالكين",
     "addOwner": "إضافة مالك",
     "owner": "المالك",
@@ -508,6 +513,7 @@
     "cost": "التكلفة",
     "company": "الشركة",
     "type": "النوع",
+
     "enterArabicName": "أدخل الاسم العربي",
     "enterEnglishName": "أدخل الاسم الإنجليزي",
     "enterCommercialName": "أدخل الاسم التجاري",
@@ -527,6 +533,10 @@
     "unit": "الوحدة",
     "remove": "إزالة",
     "selectUnit": "اختر الوحدة",
+    "retailPrice": "سعر البيع",
+    "taxRate": "ضريبة القيمة المضافة(%)",
+    "discount": "الخصم(%)",
+    "barcode": "الباركود",
     "addNewUnit": "إضافة وحدة جديدة",
     "quantityPerParent": "الكمية لكل وحدة أصل",
     "mainUnit": "الوحدة الرئيسية",
