--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -202,6 +202,11 @@
     "subscriptionStatus": "Subscription Status",
     "businessLogo": "Business Logo",
     "uploadLogo": "Upload Logo",
+    "branchesInformation": "Branches Information",
+    "branch": "Branch",
+    "branchName": "Branch Name",
+    "branchContactNumber": "Branch Contact Number",
+    "branchAddress": "Branch Address",
     "ownersInformation": "Owners Information",
     "addOwner": "Add Owner",
     "owner": "Owner",
@@ -527,6 +532,10 @@
     "unit": "Unit",
     "remove": "Remove",
     "selectUnit": "Select unit",
+    "retailPrice": "Selling Price",
+    "taxRate": "VAT(%)",
+    "discount" : "Disc(%)",
+    "barcode": "Barcode",
     "addNewUnit": "Add new unit",
     "quantityPerParent": "Quantity per Parent",
     "mainUnit": "Main Unit",
